--- a/NVPN.Cross/NVPN.Cross.csproj
+++ b/NVPN.Cross/NVPN.Cross.csproj
@@ -55,6 +55,9 @@
 
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+
+        <!-- xray -->
+        <MauiAsset Include="Resources\xray\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
 
     <ItemGroup>
