--- a/NVPN.Cross/NVPN.Cross.csproj
+++ b/NVPN.Cross/NVPN.Cross.csproj
@@ -68,4 +68,20 @@
         <PackageReference Include="MudBlazor" Version="8.9.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="Resources\Xray\Windows\xray.exe">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Resources\Xray\Windows\geoip.dat">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="Resources\Xray\Windows\geosite.dat">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Resources\Xray\Android\" />
+    </ItemGroup>
+
 </Project>
