Сделан красивый ui но пока есть баги

--- a/NVPN.Cross/Platforms/Android/AndroidManifest.xml
+++ b/NVPN.Cross/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
+    
+    <!-- VPN permissions -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BIND_VPN_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    
+    <!-- VPN service feature -->
+    <uses-feature 
+        android:name="android.software.device_admin" 
+        android:required="false" />
 </manifest>
